force-app/main/default/objects/Case/fields/NBU_State__c.field-meta.xml
<CustomField>
    <fullName>NBU_State__c</fullName>
    <label>NBU State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Assigned AE</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>RMA Assigned</fullName>
            </value>
            <value>
                <fullName>Wait for Release</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer Approval</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer Info</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Pending PM approval</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>RMA Approved</fullName>
            </value>
            <value>
                <fullName>RMA Canceled</fullName>
            </value>
            <value>
                <fullName>Move to OEM RMA</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer to apply Patch</fullName>
            </value>
            <value>
                <fullName>Soft Close - Pending Approval</fullName>
            </value>
            <value>
                <fullName>Wait for Implementation</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Pending Vendor RMA</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Shipment</fullName>
            </value>
            <value>
                <fullName>Pending Vendor 8D</fullName>
            </value>
            <value>
                <fullName>Vendor Approved</fullName>
            </value>
            <value>
                <fullName>PR Issued</fullName>
            </value>
            <value>
                <fullName>PO Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Delivery</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Quote Provided</fullName>
            </value>
            <value>
                <fullName>Confirmed Vendor Delivery</fullName>
            </value>
            <value>
                <fullName>Updated Request Arrived</fullName>
            </value>
            <value>
                <fullName>Golden Setup Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>