force-app/main/default/objects/Case/fields/New_User_Additional_Comments_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>New_User_Additional_Comments_Job_Role__c</fullName>
    <inlineHelpText>Enter any additional comments, details about the job role or requests here</inlineHelpText>
    <label>New User Additional Comments/Job Role</label>
    <type>TextArea</type>
</CustomField>