force-app/main/default/objects/Case/fields/New_User_Email__c.field-meta.xml
<CustomField>
    <fullName>New_User_Email__c</fullName>
    <inlineHelpText>Email will also be used as the NVIDIA CRM username</inlineHelpText>
    <label>New User Email</label>
    <type>Email</type>
</CustomField>