force-app/main/default/objects/Case/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>This field is created to define notification type. Currently used for case closer email.</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Closer Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>