force-app/main/default/objects/Case/fields/NV_Log__c.field-meta.xml
<CustomField>
    <fullName>NV_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores log details for further analysis.</description>
    <label>NV Log</label>
    <referenceTo>NV_Log__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>