force-app/main/default/objects/Case/fields/NVBug_ID__c.field-meta.xml
<CustomField>
    <fullName>NVBug_ID__c</fullName>
    <label>NVBug ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>