force-app/main/default/objects/Case/fields/NVBug_URL__c.field-meta.xml
<CustomField>
    <fullName>NVBug_URL__c</fullName>
    <description>URL to navigate to the corresponding NVBug</description>
    <formula>&quot;www.nvbug.com/&quot; &amp; NVBug_ID__c</formula>
    <label>NVBug URL</label>
    <type>Text</type>
</CustomField>