force-app/main/default/objects/Case/fields/Other_Support_Programs__c.field-meta.xml
<CustomField>
    <fullName>Other_Support_Programs__c</fullName>
    <label>Other Support Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRID Eval</fullName>
            </value>
            <value>
                <fullName>NGC Registry</fullName>
            </value>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>MagLev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>