force-app/main/default/objects/Case/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>SDS-3030: This field stores User Role of Case Owner. Created to use in Listview to filter based on User Role.</description>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>