force-app/main/default/objects/Case/fields/Ownership_frozen__c.field-meta.xml
<CustomField>
    <fullName>Ownership_frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ownership frozen</label>
    <type>Checkbox</type>
</CustomField>