force-app/main/default/objects/Case/fields/PagerDuty_Incident_Title__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Incident_Title__c</fullName>
    <description>Field is used by the PagerDuty Integration</description>
    <formula>&quot;[&quot; &amp; TEXT(Product_Category__c) &amp; &quot;] &quot; &amp; &quot;[&quot; &amp; Account.Name &amp; &quot;] &quot; &amp; &quot;[&quot; &amp; CaseNumber &amp; &quot;] &quot; &amp;  Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PagerDuty Incident Title</label>
    <type>Text</type>
</CustomField>