force-app/main/default/objects/Case/fields/PagerDuty_Service__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Service__c</fullName>
    <inlineHelpText>Provide a list of Pagerduty Services for Creating an Incident in Pagerduty</inlineHelpText>
    <label>Escalation to Incident Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>egx-cloud-incidents</fullName>
            </value>
            <value>
                <fullName>NVES-TEST-SERVICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>