force-app/main/default/objects/Case/fields/PAK_and_or_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>PAK_and_or_Serial_Number__c</fullName>
    <label>PAK and/or Serial Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>