force-app/main/default/objects/Case/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto populated from Account.</description>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>All Cases</relationshipLabel>
    <relationshipName>RelatedCases</relationshipName>
    <type>Lookup</type>
</CustomField>