force-app/main/default/objects/Case/fields/Preventive_Action__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action__c</fullName>
    <label>Preventive Action</label>
    <type>TextArea</type>
</CustomField>