force-app/main/default/objects/Case/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <label>Problem Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration Assistance</fullName>
            </value>
            <value>
                <fullName>DCS HW</fullName>
            </value>
            <value>
                <fullName>DCS SW</fullName>
            </value>
            <value>
                <fullName>DCV HW</fullName>
            </value>
            <value>
                <fullName>Deep Learning</fullName>
            </value>
            <value>
                <fullName>Drive AV/OS SW</fullName>
            </value>
            <value>
                <fullName>DriveSim SW</fullName>
            </value>
            <value>
                <fullName>Error Message, Logs, Debugs</fullName>
            </value>
            <value>
                <fullName>Hardware Failure</fullName>
            </value>
            <value>
                <fullName>Inference</fullName>
            </value>
            <value>
                <fullName>Install, Uninstall or Upgrade</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Machine Learning</fullName>
            </value>
            <value>
                <fullName>Pegasus HW</fullName>
            </value>
            <value>
                <fullName>Product Feature/Function Question</fullName>
            </value>
            <value>
                <fullName>SW Download Assistance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>