force-app/main/default/objects/Case/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CUDA</fullName>
                <color>#A845DC</color>
                <label>CUDA</label>
            </value>
            <value>
                <fullName>DGX</fullName>
                <color>#78C953</color>
                <label>DGX</label>
            </value>
            <value>
                <fullName>DRIVE Constellation</fullName>
                <color>#F3D904</color>
                <label>DRIVE Constellation</label>
            </value>
            <value>
                <fullName>Fleet Command</fullName>
            </value>
            <value>
                <fullName>GFN Services</fullName>
                <color>#66E9BD</color>
                <label>GFN Services</label>
            </value>
            <value>
                <fullName>GRID</fullName>
                <color>#0B6FCE</color>
                <label>GRID</label>
            </value>
            <value>
                <fullName>HPC SDK</fullName>
            </value>
            <value>
                <fullName>NGC-Ready Service</fullName>
                <color>#E27001</color>
                <label>NGC-Ready Service</label>
            </value>
            <value>
                <fullName>NGC-Ready Systems</fullName>
                <color>#E27001</color>
                <isActive>false</isActive>
                <label>NGC-Ready Systems</label>
            </value>
            <value>
                <fullName>Omniverse</fullName>
            </value>
            <value>
                <fullName>Parabricks</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server</fullName>
                <color>#A53711</color>
                <label>RTX Blade Server</label>
            </value>
            <value>
                <fullName>Tesla</fullName>
                <isActive>false</isActive>
                <label>Tesla</label>
            </value>
            <value>
                <fullName>vGaming</fullName>
            </value>
            <value>
                <fullName>vStreaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>