force-app/main/default/objects/Case/fields/Reason_for_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Transfer__c</fullName>
    <label>Reason for Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CMT Initiated Account Merges</fullName>
            </value>
            <value>
                <fullName>Divestiture</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PEC/PECC Correction</fullName>
            </value>
            <value>
                <fullName>SO Needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>