force-app/main/default/objects/Case/fields/Regional_TAM__c.field-meta.xml
<CustomField>
    <fullName>Regional_TAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto populated from Account.Regional TAM field.</description>
    <label>TAM Primary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReginalTAMCases</relationshipName>
    <type>Lookup</type>
</CustomField>