force-app/main/default/objects/Case/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <description>This field is auto populated with Submitter&apos;s Email.</description>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>