force-app/main/default/objects/Case/fields/RN_Incident_ID__c.field-meta.xml
<CustomField>
    <fullName>RN_Incident_ID__c</fullName>
    <externalId>true</externalId>
    <label>RN Incident ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>