force-app/main/default/objects/Case/fields/SAP_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contact_ID__c</fullName>
    <formula>Contact.SAP_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Contact ID</label>
    <type>Text</type>
</CustomField>