force-app/main/default/objects/Case/fields/SAP_Sales_Order_or_PO__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Order_or_PO__c</fullName>
    <label>SAP Sales Order or PO</label>
    <length>40</length>
    <type>Text</type>
</CustomField>