force-app/main/default/objects/Case/fields/Service_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Type__c</fullName>
    <formula>TEXT(Account.Service_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Account Type</label>
    <type>Text</type>
</CustomField>