force-app/main/default/objects/Case/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity reported by the Customer</description>
    <inlineHelpText>1 Important functions unusable/no workarounds
2 Failures occur/workarounds exist/minor features not working
3 Failures occur/system recovers w/o installed workaround/impact tolerable
4 Cosmetic Defects
 5 Enhancement Requests</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S1:_Catastrophic</fullName>
                <label>S1: Catastrophic</label>
            </value>
            <value>
                <fullName>S2:_Severe</fullName>
                <label>S2: Severe</label>
            </value>
            <value>
                <fullName>S3:_Moderate</fullName>
                <default>true</default>
                <label>S3: Moderate</label>
            </value>
            <value>
                <fullName>S4:_Minor/Cosmetic_Defects</fullName>
                <label>S4: Minor/Cosmetic Defects</label>
            </value>
            <value>
                <fullName>S5:_Enhancement_Request</fullName>
                <label>S5: Enhancement Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>