force-app/main/default/objects/Case/fields/Site_Survey_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Survey Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_SiteSurvey_ApprovedBy</relationshipName>
    <type>Lookup</type>
</CustomField>