force-app/main/default/objects/Case/fields/Site_Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Sent_Date__c</fullName>
    <label>Site Survey Sent Date</label>
    <type>Date</type>
</CustomField>