force-app/main/default/objects/Case/fields/Site_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Status__c</fullName>
    <label>Site Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>