force-app/main/default/objects/Case/fields/SLA_Text__c.field-meta.xml
<CustomField>
    <fullName>SLA_Text__c</fullName>
    <description>This field defines the message to be sent in Milestone Email Alerts.</description>
    <label>SLA Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>