force-app/main/default/objects/Case/fields/Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect__c</fullName>
    <label>Solution Architect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>