force-app/main/default/objects/Case/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Source Account Cases</relationshipLabel>
    <relationshipName>Source_Account_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>