force-app/main/default/objects/Case/fields/Source_Account_PEC_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_PEC_Number__c</fullName>
    <formula>IF(ISBLANK(Source_Account__c), Account.SAP_Customer_Number__c, Source_Account__r.SAP_Customer_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Account PEC Number</label>
    <type>Text</type>
</CustomField>