force-app/main/default/objects/Case/fields/Source_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Request__c</fullName>
    <label>Source of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>External (Customer or Partner)</fullName>
                <default>true</default>
                <label>External (Customer or Partner)</label>
            </value>
            <value>
                <fullName>Internal (CMT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>