force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Approval Request</fullName>
            </value>
            <value>
                <fullName>Account Teams</fullName>
            </value>
            <value>
                <fullName>Account Updates</fullName>
            </value>
            <value>
                <fullName>Cloud Consumption Oppty (CCO)</fullName>
            </value>
            <value>
                <fullName>Conga (Mail Merge) Issue</fullName>
            </value>
            <value>
                <fullName>Contact Conversion issues</fullName>
            </value>
            <value>
                <fullName>Contracts Packet</fullName>
            </value>
            <value>
                <fullName>Dashboard Assistance</fullName>
            </value>
            <value>
                <fullName>Deal Registration Lead</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>EBC Assistance</fullName>
            </value>
            <value>
                <fullName>Existing Opp Merge</fullName>
            </value>
            <value>
                <fullName>Existing Report / Dashboard update</fullName>
            </value>
            <value>
                <fullName>General User Request</fullName>
            </value>
            <value>
                <fullName>GPU Genius Training</fullName>
            </value>
            <value>
                <fullName>Help with Contacts</fullName>
            </value>
            <value>
                <fullName>Lead routing</fullName>
            </value>
            <value>
                <fullName>Locator</fullName>
            </value>
            <value>
                <fullName>Mass Email Assistance</fullName>
            </value>
            <value>
                <fullName>MDF/ Rebates</fullName>
            </value>
            <value>
                <fullName>New Email Template Request</fullName>
            </value>
            <value>
                <fullName>New Report Request</fullName>
            </value>
            <value>
                <fullName>NFR SW Licence Request</fullName>
            </value>
            <value>
                <fullName>NPN Compliance</fullName>
            </value>
            <value>
                <fullName>Online App Form</fullName>
            </value>
            <value>
                <fullName>Opportunity Update</fullName>
            </value>
            <value>
                <fullName>Opp Reg Extension</fullName>
            </value>
            <value>
                <fullName>Partner Contacts</fullName>
            </value>
            <value>
                <fullName>Portal Issues</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>