force-app/main/default/objects/Case/fields/Submitted_By_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_User_Role__c</fullName>
    <description>This field is used for sharing internal cases with user based on the User Role of the person submitting the case.</description>
    <label>Submitted By User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>