force-app/main/default/objects/Case/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <formula>if(Account.Billing_Region_Text__c = &quot;JAPAN&quot;,
HYPERLINK($CustomMetadata.Survey_Link__mdt.Japan_Link.Link__c + &quot;&amp;cId=&quot;+ContactId+&quot;&amp;caId=&quot;+Id+&quot;&amp;parentId=&quot;+Id, &quot;Survey Link&quot;),
HYPERLINK($CustomMetadata.Survey_Link__mdt.Default_Link.Link__c+ &quot;&amp;cId=&quot;+ContactId+&quot;&amp;caId=&quot;+Id+&quot;&amp;parentId=&quot;+Id, &quot;Survey Link&quot;))</formula>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>