force-app/main/default/objects/Case/fields/Synopsis_Activity__c.field-meta.xml
<CustomField>
    <fullName>Synopsis_Activity__c</fullName>
    <inlineHelpText>Required when Incident Status is With Engineering</inlineHelpText>
    <label>Synopsis Activity</label>
    <type>TextArea</type>
</CustomField>