force-app/main/default/objects/Case/fields/System_Access__c.field-meta.xml
<CustomField>
    <fullName>System_Access__c</fullName>
    <label>System Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NVIDIA CRM (Salesforce)</fullName>
            </value>
            <value>
                <fullName>Weekly Commit</fullName>
            </value>
            <value>
                <fullName>SuRF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>