force-app/main/default/objects/Case/fields/Time_Assigned_to_L3__c.field-meta.xml
<CustomField>
    <fullName>Time_Assigned_to_L3__c</fullName>
    <label>Time Assigned to L3</label>
    <type>DateTime</type>
</CustomField>