force-app/main/default/objects/Case/fields/Time_Delay_Last_Activity_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Time_Delay_Last_Activity_DateTime__c</fullName>
    <formula>Last_Activity_Date__c - (59/1440)</formula>
    <label>Time Delay Last Activity DateTime</label>
    <type>DateTime</type>
</CustomField>