force-app/main/default/objects/Case/fields/TimeDelay__c.field-meta.xml
<CustomField>
    <fullName>TimeDelay__c</fullName>
    <formula>CreatedDate  - (59/1440)</formula>
    <label>TimeDelay</label>
    <type>DateTime</type>
</CustomField>