force-app/main/default/objects/Case/fields/Trigger_Action__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Action__c</fullName>
    <description>This field is used to explicitly trigger any actions. Used in timebased workflow to escalate case after 1 hour.</description>
    <label>Trigger Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>