force-app/main/default/objects/Case/fields/Working_Theory__c.field-meta.xml
<CustomField>
    <fullName>Working_Theory__c</fullName>
    <label>Working Theory</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>